public class Bewertung {
    private int bewertung;
    private String bewertungstext;
    public Bewertung(int pBewertung, String pBewertungstext){
        pBewertung = bewertung;
        pBewertungstext = bewertungstext;
    }
    public int getBewertung(){
        return bewertung;
    }
}
