@startuml
skinparam classAttributeIconSize 0

class Benutzerverwaltung{
 -benutzer : Benutzer
 -überprüfeanmeldung ()
 + Benutzerverwaltung ()
 + registriere() : void
 - anmeldung(pPassword : String) : void
 + abmeldung() : void
 + zeigeMenue() : void
 + getAngemeldet() : boolean
 + getBenutzer() : Benutzer
}



class MenueFuehrung{
 - sc : Scanner(System.in)

 +MenueFuehrung()
 +registriere() : Benutzer
 + anmeldung() : String
 + abmeldung() : void
 + zeigeSpiele(pBenutzer : Benutzer) : void
 + spielAnlegen() : Spiel
 - start() : int
 + speieleigenschaftenAnlegen(pBenutzer : Benutzer) : void
 + spieleigenschaftenAbfragen() : String
 + zeigeMenue(pBenutzerverwaltung : pBenutzerverwaltung) : void
 +starteSpieleUmfrage
 +zufälligesSpielauswählen(pSpiele[] : Spiele[])

 
 }

class Person{
 -vorname: String
 -nachname: String
 -alter : int
 + Person(pVorname : String, pNachname : String, pAlter : int)
 +setVorname(pName : String) : void
 +setNachname(pName : String) : void
 +getVorname() : String
 +getNachname() : String
 +setAlter(pAlter : int) : void
 +getAlter() : int
}



class Spiel{
 -abzeichen : int
 -kaufjahr : int 
 -name : String
 +spiel(pName : String)
 +gebeAlleErrungenschaften aus() : String
 +spielzeithinzufügen(pSpielzeit : int) : void
 +getName(): String
 +setName(pName : String) : void
 +setKaufjahr:int
 +getKaufjahr(pJahr:int)
 +toString() : String

}

class Errungenschaft{
 -name : String
 -jahr : int
 +Errungenschaft( pJahr : int ,pName : String)
 +getErrungenschaft(): String
 setName(): String
 getName(): String 
 +getJahr(): String
 +setJahr(pErrungenschaft : Errungenschaft) : void
 +toString() String
 +löscheErrungenschaft(pErrungenschaftID)
}




class Benutzer{
  -level : int
  -passwort : String
  +zeigeLevelan(pBenutzer:Benutzer)
  +änderePassword(pPassword : String) : void
  +ueberpruefeAnmeldedaten(pPassword : String, pName : String): boolean
  + spieleAnlegen(pSpiel : Spiel) : String
  +alleSpieleAusgeben() : void
  +bewertungenFuerSpielAnlegen(pSpieleID : int, pErrungenschaft : String) : void
   +errungenschaftAnlegen(pSpieleID : int, pErrungenschaft : String) : void
  -setPassword(pPassword : String) : void
}

class Datenleser{
  +erstelleDatei()
  +leseDatenein() : void 
  -leseBewertungenEin : int
  -leseBenutzerDatenEin : String
  -leseErrungenschaftein : Errungenschaft
  -leseSpieleein() : Spiel
  }

class Bewertung{
  +Bewertungspunkte:int
  +pBewertungstext:String
  +setBewertung(pBewertungstext:String,pBewertungspunkteint :int)
  +löscheBewertung(pBewertungID:int)

}


Spiel "1" *-- "0..10" Errungenschaft
Spiel "1" *-- "0..10" Bewertung
Benutzerverwaltung  *-- "1" MenueFuehrung
Benutzer "1" *-- "0..10" Spiel
Person <|-- Benutzer

@enduml
